# tasmil-indexer

./: .env  .env.example  Cargo.toml  MIGRATION_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  README.md  run_cetus_processor.sh
backfill_progress/: backfill_progress
migrations/2025-05-16-112107_add_cetus_indexer_table/: up.sql
migrations/2025-05-16-124106_create_volume_data/: down.sql  up.sql
migrations/2025-05-20-101336_add_sui_usd_volume_to_volume_data/: down.sql  up.sql
migrations/2025-05-23-000000_add_fees_24h/: down.sql  up.sql
migrations/2025-05-28-054220_create_suins_indexer_schema/: down.sql  up.sql
src/: cetus_indexer.rs  config.rs  database.rs  indexer.rs  lib.rs  main.rs  models.rs  schema.rs
