[package]
name = "suins-indexer"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version = "0.1.0"

[workspace]
members = ["."]

[workspace.dependencies]
diesel = { version = "2.1.0", features = ["postgres", "serde_json"] }
diesel-async = { version = "0.4.1", features = ["bb8", "postgres"] }
anyhow = "1.0"
async-trait = "0.1"
backoff = "0.4"
base64-url = "2.0"
bcs = "0.1"
bytes = "1.4"
futures = "0.3"
object_store = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
prometheus = "0.13"
telemetry-subscribers = "0.2"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
url = "2.3"
rand = "0.8"
tempfile = "3.8"

[dependencies]
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
sui_data_ingestion_core = { git = "https://github.com/mystenlabs/sui", package = "sui-data-ingestion-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true }
base64-url = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
mysten_metrics = { git = "https://github.com/mystenlabs/sui", package = "mysten-metrics" }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
prometheus = { workspace = true }
telemetry-subscribers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
sui_name_service = { git = "https://github.com/mystenlabs/sui", package = "sui-name-service" }
sui_storage = { git = "https://github.com/mystenlabs/sui", package = "sui-storage" }
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
dotenvy = "0.15"
move_core_types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types" }
mysten_service = { git = "https://github.com/mystenlabs/sui", package = "mysten-service" }
rustls = "0.23.26"
webpki-roots = "0.26.3"
tokio-postgres-rustls = "0.12.0"
tokio-postgres = "0.7.12"
futures-util = "0.3.30"
chrono = "0.4.41"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono"] }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
